--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
+	
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<title>Document</title>
 </head>
 <body>
-	<p>What what</p>
-</body>
+
+<nav class="top-navigation">
+	<div class="content">
+		<ul class="links">
+			<li><a class="active" href="http://hellohappy.org/beautiful-web-type/">Meet Karma</a></li>
+			<li><a href="http://hellohappy.org/beautiful-web-type/">How it Works</a></li>
+			<li><a href="http://hellohappy.org/beautiful-web-type/">Store</a></li>
+			<li><a href="http://hellohappy.org/beautiful-web-type/">Blog</a></li>
+			<li><a href="http://hellohappy.org/beautiful-web-type/">Help</a></li>
+			<li><a href="http://hellohappy.org/beautiful-web-type/">Login</a></li>
+		</ul>
+		<img class="logo" src="images/karma-logo.svg" alt="Karma" width="26">
+
+	</div>
+</nav>
+
+
+<section class="introduction">
+<div class="content">
+	<h1 class="introduction-text">Introducing Karma</h1>
+	<h3 class="introduction-text">Bring WiFi with you, everywhere you go.</h3>
+	<button class="buttons">Learn More</button>
+</div>	
+</section>
+<!-- 
+
+</body> -->
 </html>
