--- a/index.html
+++ b/index.html
@@ -33,7 +33,21 @@
 	<button class="buttons">Learn More</button>
 </div>	
 </section>
-<!-- 
 
-</body> -->
+<section class="cases">
+	<h1 class="main">Everyone needs a little Karma.</h1>
+	<div class="tile-section">
+		<div class="tiles">
+			<img class="tiles" src="file:///Users/josh.clemans/Downloads/icon-devices%20copy.svg" alt="This is how is goes">
+		</div>
+		<div class="tiles">
+			<img class="tiles" src="file:///Users/josh.clemans/Downloads/icon-coffee%20copy.svg" alt="">
+		</div>
+		<div class="tiles">
+			<img class="tiles" src="file:///Users/josh.clemans/Downloads/icon-refill%20copy.svg" alt="">
+		</div>
+	</div>
+</section>
+
+</body>
 </html>
