--- a/index.html
+++ b/index.html
@@ -35,18 +35,26 @@
 </section>
 
 <section class="cases">
-	<h1 class="main">Everyone needs a little Karma.</h1>
-	<div class="tile-section">
-		<div class="tiles">
-			<img class="tiles" src="file:///Users/josh.clemans/Downloads/icon-devices%20copy.svg" alt="This is how is goes">
-		</div>
-		<div class="tiles">
-			<img class="tiles" src="file:///Users/josh.clemans/Downloads/icon-coffee%20copy.svg" alt="">
-		</div>
-		<div class="tiles">
-			<img class="tiles" src="file:///Users/josh.clemans/Downloads/icon-refill%20copy.svg" alt="">
-		</div>
-	</div>
+	<h2>Everyone needs a little Karma.</h2>
+	<ul class="tile-section">
+		<li class="tiles">
+			<img src="file:///Users/josh.clemans/Downloads/icon-devices%20copy.svg" alt="This is how is goes" height="127" width="127">
+			<div class="caption">
+			<h3>Internet for all devices</h3>
+			</div>
+		</li>
+		<li class="tiles">
+			<img src="file:///Users/josh.clemans/Downloads/icon-coffee%20copy.svg" alt="Stuff and" height="127" width="127">
+			<div class="caption">
+				<h3>Boost your productivity</h3>
+			</div>
+		</li>
+		<li class="tiles">
+			<img src="file:///Users/josh.clemans/Downloads/icon-refill%20copy.svg" alt="Stuff and stuff" height="127" width="127">
+			<div class="caption">
+			<h3>Pay as You Go</h3>
+		</li>
+	</ul>
 </section>
 
 </body>
