--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
-	
+<!-- Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-	<title>Document</title>
+<!-- Icons -->
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+
+	<title>Karma</title>
 </head>
 <body>
 
@@ -52,10 +55,24 @@
 		<li class="tiles">
 			<img src="file:///Users/josh.clemans/Downloads/icon-refill%20copy.svg" alt="Stuff and stuff" height="127" width="127">
 			<div class="caption">
-			<h3>Pay as You Go</h3>
+			<h3>Pay as you go</h3>
 		</li>
 	</ul>
 </section>
+
+<footer class="social">
+	<div class="cases">
+		<hr>
+		<h5>Join us on</h5>
+		<ul class="icons">
+			<li class="twitter"><i class="fa fa-twitter" style="color:#00aced;"></i></i></li>
+			<li class="facebook"><i class="fa fa-facebook-f" style="color:#3B5998;"></i></li>
+			<li class="instagram"><i class="fa fa-instagram" style="color:#fb3958;"></i></li>
+		</ul>
+		<br>
+		 <span class="copy">© Karma Mobility, Inc.</span> 
+	</div>
+</footer>
 
 </body>
 </html>
