--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<meta charset="UTF-8">
 <!-- Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 <!-- Icons -->
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+<!-- Favicon -->
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 
 	<title>Karma</title>
 </head>
@@ -70,7 +72,7 @@
 			<li class="instagram"><i class="fa fa-instagram" style="color:#fb3958;"></i></li>
 		</ul>
 		<br>
-		 <span class="copy">© Karma Mobility, Inc.</span> 
+		 <span class="copy">&copy; Karma Mobility, Inc.</span> 
 	</div>
 </footer>
 
