github web version

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 <nav class="top-navigation">
 	<div class="content">
 		<ul class="links">
-			<li><a class="active" href="http://hellohappy.org/beautiful-web-type/">Meet Karma</a></li>
-			<li><a href="http://hellohappy.org/beautiful-web-type/">How it Works</a></li>
+			<li>
+				<a class="active" href="http://hellohappy.org/beautiful-web-type/">Meet Karma</a>
+			</li>
+			<li>
+				<a href="http://hellohappy.org/beautiful-web-type/">How it Works</a>
+			</li>
 			<li><a href="http://hellohappy.org/beautiful-web-type/">Store</a></li>
 			<li><a href="http://hellohappy.org/beautiful-web-type/">Blog</a></li>
 			<li><a href="http://hellohappy.org/beautiful-web-type/">Help</a></li>
