revised icon locations

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 	<h2>Everyone needs a little Karma.</h2>
 	<ul class="tile-section">
 		<li class="tiles">
-			<img src="file:///Users/josh.clemans/Downloads/icon-devices%20copy.svg" alt="This is how is goes" height="127" width="127">
+			<img src="images/devices.svg" alt="This is how is goes" height="127" width="127">
 			<div class="caption">
 			<h3>Internet for all devices</h3>
 			</div>
 		</li>
 		<li class="tiles">
-			<img src="file:///Users/josh.clemans/Downloads/icon-coffee%20copy.svg" alt="Stuff and" height="127" width="127">
+			<img src="images/coffee.svg" alt="Stuff and" height="127" width="127">
 			<div class="caption">
 				<h3>Boost your productivity</h3>
 			</div>
 		</li>
 		<li class="tiles">
-			<img src="file:///Users/josh.clemans/Downloads/icon-refill%20copy.svg" alt="Stuff and stuff" height="127" width="127">
+			<img src="images/refill.svg" alt="Stuff and stuff" height="127" width="127">
 			<div class="caption">
 			<h3>Pay as you go</h3>
 		</li>
